src/objects/AsyncTriggerArqSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ApexHelperClassName__c</fullName>
        <externalId>true</externalId>
        <label>ApexHelperClassName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexTriggerName__c</fullName>
        <externalId>true</externalId>
        <label>ApexTriggerName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BreakIfError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BreakIfError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DependsOnError__c</fullName>
        <label>DependsOnFailure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DependsOn__c</fullName>
        <label>DependsOnSuccess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <externalId>true</externalId>
        <label>Event</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <externalId>true</externalId>
        <label>SObject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAsync</label>
        <type>Checkbox</type>
    </fields>
    <label>AsyncTriggerArqSettings</label>
</CustomObject>